--- a/notebooks/backtest.ipynb
+++ b/notebooks/backtest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-05 20:53:19,943 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-06-05 20:53:35,697 - root - INFO - ** Kedro project timeseries\n",
-      "2022-06-05 20:53:35,699 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n",
-      "2022-06-05 20:53:36,031 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-06-05 20:53:36,106 - root - INFO - ** Kedro project timeseries\n",
-      "2022-06-05 20:53:36,108 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
+      "2022-06-05 21:56:04,555 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-05 21:56:05,472 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-05 21:56:05,474 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n",
+      "2022-06-05 21:56:05,696 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-05 21:56:05,766 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-05 21:56:05,768 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
      ]
     }
    ],
@@ -27,28 +27,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## To Do:\n",
+    "- Add ability to leverage\n",
+    "  - Cost of leverage\n",
+    "  - Margin\n",
+    "- Benchmark "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel\n",
-    "from typing import List, Optional\n",
     "import numpy as np\n",
-    "from typing import TypeVar"
+    "import pandas as pd\n",
+    "from pydantic import BaseModel\n",
+    "from typing import List, TypeVar, Optional, Dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PandasDataFrame = TypeVar('pandas.core.frame.DataFrame')"
+    "PandasDataFrame = TypeVar(\"pandas.core.frame.DataFrame\")"
    ]
   },
   {
@@ -60,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-05 21:13:19,568 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
+      "2022-06-05 21:56:06,118 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
      ]
     },
     {
@@ -258,13 +269,13 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_df = catalog.load('fund_prices')\n",
+    "price_df = catalog.load(\"fund_prices\")\n",
     "price_df"
    ]
   },
@@ -277,51 +288,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Portfolio(BaseModel):\n",
     "    fund_codes: List[str]\n",
-    "    fund_weights: List[str]\n",
-    "    date: str\n",
-    "    amount: float\n",
+    "    fund_amounts: List[float]\n",
+    "    start_date: str\n",
+    "    end_date: str\n",
     "    df: PandasDataFrame\n",
+    "    rebalance: bool\n",
+    "    rebalance_frequency: Optional[str] = None\n",
+    "    frequency_map = Dict = {\"y\": 12, \"q\": 3, \"m\": 1}\n",
     "\n",
-    "    def backtest_funds(\n",
-    "        self\n",
-    "    ):\n",
-    "        number_funds = len(self.fund_codes)\n",
+    "    def prepare_data(self):\n",
+    "        self.df[\"date\"] = pd.to_datetime(self.df[\"date\"])\n",
+    "        self.df = self.df.sort_values(by=\"date\").reset_index(drop=True)\n",
+    "        self.df = self.df.loc[\n",
+    "            (self.df.date >= self.start_date) & (self.df.date <= self.end_date)\n",
+    "        ].reset_index(drop=True)\n",
     "\n",
-    "        fund_diagonal = np.zeros((number_funds, number_funds))\n",
-    "        np.fill_diagonal(fund_diagonal, self.fund_weights)\n",
+    "    def normalise_index(self, fund_history):\n",
+    "        initial_index = fund_history[self.fund_codes].iloc[0]\n",
+    "        result = fund_history[self.fund_codes].divide(initial_index, axis=1)\n",
+    "        result[\"date\"] = fund_history[\"date\"]\n",
+    "        return result\n",
     "\n",
-    "        result = self.df[self.fund_codes].dot(fund_diagonal)\n",
+    "    def backtest_portfolio(self, fund_amount, fund_history):\n",
+    "        num_funds = len(self.fund_codes)\n",
+    "        fund_diagonal = np.zeros((num_funds, num_funds))\n",
+    "        np.fill_diagonal(fund_diagonal, fund_amount)\n",
+    "\n",
+    "        result = fund_history[self.fund_codes].dot(fund_diagonal)\n",
+    "\n",
     "        result.columns = self.fund_codes\n",
     "\n",
     "        result[\"portfolio\"] = result.sum(axis=1)\n",
+    "        result[\"date\"] = fund_history[\"date\"]\n",
     "\n",
-    "        return result\n"
+    "        return result\n",
+    "\n",
+    "    def backtest_strategy(self):\n",
+    "\n",
+    "        if self.rebalance:\n",
+    "            fund_weights= [i / sum(self.fund_amounts) for i in self.fund_amounts]\n",
+    "            rebalance_frequency = self.frequency_map[self.rebalance_frequency.lower()]\n",
+    "\n",
+    "            date_range = pd.Series(pd.date_range(start=self.start_date, end=self.end_date,freq='D'))\n",
+    "            month_end_dates = date_range[date_range.dt.is_month_end].reset_index(drop=True)\n",
+    "            rebalancing_dates = month_end_dates[\n",
+    "                month_end_dates.index % rebalance_frequency == 0\n",
+    "            ].reset_index(drop=True).dt.strftime(\"%Y-%m-%d\").values.tolist()\n",
+    "\n",
+    "            if self.start_date not in rebalancing_dates:\n",
+    "                rebalancing_dates.insert(0,self.start_date)\n",
+    "\n",
+    "            if self.end_date not in rebalancing_dates:\n",
+    "                rebalancing_dates.append(self.end_date)\n",
+    "\n",
+    "            current_amount = sum(self.fund_amounts)\n",
+    "\n",
+    "            strategy_list = []\n",
+    "\n",
+    "            start_period = rebalancing_dates[0]\n",
+    "            \n",
+    "            for i in range(0, len(rebalancing_dates)-1):\n",
+    "                \n",
+    "                end_period = rebalancing_dates[i + 1]\n",
+    "\n",
+    "                fund_history = self.df.loc[\n",
+    "                    (self.df.date >= start_period) & (self.df.date <= end_period)\n",
+    "                ].reset_index(drop=True)\n",
+    "\n",
+    "                fund_history = self.normalise_index(fund_history)\n",
+    "\n",
+    "                fund_amounts = np.multiply(fund_weights,current_amount)\n",
+    "                \n",
+    "                slice_df = self.backtest_portfolio(fund_amounts, fund_history)\n",
+    "\n",
+    "                current_amount = slice_df.iloc[-1]['portfolio']\n",
+    "\n",
+    "                strategy_list.append(slice_df)\n",
+    "\n",
+    "                start_period = slice_df.iloc[-1]['date']\n",
+    "\n",
+    "            result_df = pd.concat(strategy_list)\n",
+    "            result_df[\"date\"] = result_df[\"date\"].dt.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "        else:\n",
+    "            self.df = self.normalise_index(self.df)\n",
+    "            \n",
+    "            result_df = self.backtest_portfolio(self.fund_amounts, self.df)\n",
+    "\n",
+    "        return result_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
     "external_data = {\n",
-    "    \"fund_codes\": [\"AMD\", \"AMZN\", \"AAPL\"],\n",
-    "    \"fund_weights\": [0.3,0.4,0.3],\n",
-    "    \"date\": \"2018-12-31\",\n",
-    "    \"amount\": 1000,\n",
-    "    \"df\": price_df\n",
+    "    \"fund_codes\": [\"EBAY\", \"AAPL\"],\n",
+    "    \"fund_amounts\": [30,30],\n",
+    "    \"start_date\": \"2012-12-27\",\n",
+    "    \"end_date\": \"2019-12-31\",\n",
+    "    \"df\": price_df,\n",
+    "    \"rebalance\": True,\n",
+    "    \"rebalance_frequency\": \"m\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -354,47 +436,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AMD</th>\n",
-       "      <th>AMZN</th>\n",
+       "      <th>EBAY</th>\n",
        "      <th>AAPL</th>\n",
        "      <th>portfolio</th>\n",
+       "      <th>date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>27.5130</td>\n",
-       "      <td>1302.772</td>\n",
-       "      <td>39.807000</td>\n",
-       "      <td>1370.092000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>2012-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>27.6870</td>\n",
-       "      <td>1314.340</td>\n",
-       "      <td>40.116000</td>\n",
-       "      <td>1382.143000</td>\n",
+       "      <td>29.713661</td>\n",
+       "      <td>29.681350</td>\n",
+       "      <td>59.395011</td>\n",
+       "      <td>2012-12-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>27.1860</td>\n",
-       "      <td>1328.800</td>\n",
-       "      <td>40.461000</td>\n",
-       "      <td>1396.447000</td>\n",
+       "      <td>30.422171</td>\n",
+       "      <td>30.996752</td>\n",
+       "      <td>61.418923</td>\n",
+       "      <td>2012-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>27.4800</td>\n",
-       "      <td>1313.584</td>\n",
-       "      <td>41.007000</td>\n",
-       "      <td>1382.071000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>30.709462</td>\n",
+       "      <td>30.709462</td>\n",
+       "      <td>61.418923</td>\n",
+       "      <td>2012-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>27.5430</td>\n",
-       "      <td>1269.076</td>\n",
-       "      <td>39.591000</td>\n",
-       "      <td>1336.210000</td>\n",
+       "      <th>1</th>\n",
+       "      <td>32.270476</td>\n",
+       "      <td>31.682214</td>\n",
+       "      <td>63.952690</td>\n",
+       "      <td>2013-01-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -404,77 +486,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5322</th>\n",
-       "      <td>3.1875</td>\n",
-       "      <td>25.976</td>\n",
-       "      <td>0.204030</td>\n",
-       "      <td>29.367530</td>\n",
+       "      <th>17</th>\n",
+       "      <td>88.028200</td>\n",
+       "      <td>91.850086</td>\n",
+       "      <td>179.878286</td>\n",
+       "      <td>2019-12-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5323</th>\n",
-       "      <td>3.0945</td>\n",
-       "      <td>25.224</td>\n",
-       "      <td>0.193194</td>\n",
-       "      <td>28.511694</td>\n",
+       "      <th>18</th>\n",
+       "      <td>88.125442</td>\n",
+       "      <td>93.672419</td>\n",
+       "      <td>181.797861</td>\n",
+       "      <td>2019-12-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5324</th>\n",
-       "      <td>3.1965</td>\n",
-       "      <td>26.324</td>\n",
-       "      <td>0.188296</td>\n",
-       "      <td>29.708796</td>\n",
+       "      <th>19</th>\n",
+       "      <td>87.687853</td>\n",
+       "      <td>93.636877</td>\n",
+       "      <td>181.324730</td>\n",
+       "      <td>2019-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5325</th>\n",
-       "      <td>3.0840</td>\n",
-       "      <td>26.576</td>\n",
-       "      <td>0.185408</td>\n",
-       "      <td>29.845408</td>\n",
+       "      <th>20</th>\n",
+       "      <td>87.031471</td>\n",
+       "      <td>94.192624</td>\n",
+       "      <td>181.224095</td>\n",
+       "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5326</th>\n",
-       "      <td>3.0465</td>\n",
-       "      <td>27.652</td>\n",
-       "      <td>0.179332</td>\n",
-       "      <td>30.877832</td>\n",
+       "      <th>21</th>\n",
+       "      <td>87.785095</td>\n",
+       "      <td>94.880845</td>\n",
+       "      <td>182.665940</td>\n",
+       "      <td>2019-12-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5327 rows × 4 columns</p>\n",
+       "<p>1849 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          AMD      AMZN       AAPL    portfolio\n",
-       "0     27.5130  1302.772  39.807000  1370.092000\n",
-       "1     27.6870  1314.340  40.116000  1382.143000\n",
-       "2     27.1860  1328.800  40.461000  1396.447000\n",
-       "3     27.4800  1313.584  41.007000  1382.071000\n",
-       "4     27.5430  1269.076  39.591000  1336.210000\n",
-       "...       ...       ...        ...          ...\n",
-       "5322   3.1875    25.976   0.204030    29.367530\n",
-       "5323   3.0945    25.224   0.193194    28.511694\n",
-       "5324   3.1965    26.324   0.188296    29.708796\n",
-       "5325   3.0840    26.576   0.185408    29.845408\n",
-       "5326   3.0465    27.652   0.179332    30.877832\n",
+       "         EBAY       AAPL   portfolio        date\n",
+       "0   30.000000  30.000000   60.000000  2012-12-27\n",
+       "1   29.713661  29.681350   59.395011  2012-12-28\n",
+       "2   30.422171  30.996752   61.418923  2012-12-31\n",
+       "0   30.709462  30.709462   61.418923  2012-12-31\n",
+       "1   32.270476  31.682214   63.952690  2013-01-02\n",
+       "..        ...        ...         ...         ...\n",
+       "17  88.028200  91.850086  179.878286  2019-12-24\n",
+       "18  88.125442  93.672419  181.797861  2019-12-26\n",
+       "19  87.687853  93.636877  181.324730  2019-12-27\n",
+       "20  87.031471  94.192624  181.224095  2019-12-30\n",
+       "21  87.785095  94.880845  182.665940  2019-12-31\n",
        "\n",
-       "[5327 rows x 4 columns]"
+       "[1849 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mock_portfolio.backtest_funds()"
+    "mock_portfolio.prepare_data()\n",
+    "mock_portfolio.backtest_strategy()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
