Starting factor regression

--- a/notebooks/factor_regression.ipynb
+++ b/notebooks/factor_regression.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The kedro.extras.extensions.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext kedro.extras.extensions.ipython\n",
-      "2022-06-06 17:08:26,231 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-06-06 17:08:26,324 - root - INFO - ** Kedro project timeseries\n",
-      "2022-06-06 17:08:26,325 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
+      "2022-06-06 17:25:48,970 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-06 17:25:50,335 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-06 17:25:50,339 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n",
+      "2022-06-06 17:25:50,993 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-06 17:25:51,208 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-06 17:25:51,214 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
      ]
     }
    ],
@@ -27,10 +28,7 @@
    "metadata": {},
    "source": [
     "## To Do:\n",
-    "- Add ability to leverage\n",
-    "  - Cost of leverage\n",
-    "  - Margin\n",
-    "- Benchmark "
+    "- "
    ]
   },
   {
@@ -42,19 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pydantic import BaseModel\n",
-    "from typing import List, TypeVar, Optional, Dict\n"
+    "import statsmodels.formula.api as smf\n",
+    "from typing import List, TypeVar, Optional, Dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-05 21:56:06,118 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
+      "2022-06-06 17:26:19,007 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
      ]
     },
     {
@@ -268,7 +267,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,10 +278,226 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-06-06 17:26:19,449 - kedro.io.data_catalog - INFO - Loading data from `ff_5_factor` (CSVDataSet)...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>Mkt-RF</th>\n",
+       "      <th>SMB</th>\n",
+       "      <th>HML</th>\n",
+       "      <th>RMW</th>\n",
+       "      <th>CMA</th>\n",
+       "      <th>RF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19630701</td>\n",
+       "      <td>-0.67</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-0.35</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19630702</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>-0.31</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19630703</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19630705</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>-0.26</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>-0.28</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19630708</td>\n",
+       "      <td>-0.63</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>-0.19</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14805</th>\n",
+       "      <td>20220425</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>-1.84</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>-1.07</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14806</th>\n",
+       "      <td>20220426</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>-0.34</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14807</th>\n",
+       "      <td>20220427</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>-0.56</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14808</th>\n",
+       "      <td>20220428</td>\n",
+       "      <td>2.44</td>\n",
+       "      <td>-0.50</td>\n",
+       "      <td>-0.45</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14809</th>\n",
+       "      <td>20220429</td>\n",
+       "      <td>-3.53</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14810 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  Mkt-RF   SMB   HML   RMW   CMA     RF\n",
+       "0      19630701   -0.67  0.01 -0.35  0.03  0.11  0.012\n",
+       "1      19630702    0.79 -0.31  0.24 -0.08 -0.25  0.012\n",
+       "2      19630703    0.63 -0.16 -0.09  0.13 -0.24  0.012\n",
+       "3      19630705    0.40  0.09 -0.26  0.07 -0.28  0.012\n",
+       "4      19630708   -0.63  0.07 -0.19 -0.27  0.06  0.012\n",
+       "...         ...     ...   ...   ...   ...   ...    ...\n",
+       "14805  20220425    0.71  0.12 -1.84  0.10 -1.07  0.000\n",
+       "14806  20220426   -3.00 -0.34  1.79  0.21  1.21  0.000\n",
+       "14807  20220427    0.12 -0.56  0.33  0.15  0.81  0.000\n",
+       "14808  20220428    2.44 -0.50 -0.45  0.47  0.09  0.000\n",
+       "14809  20220429   -3.53  0.87  0.58 -0.25  0.66  0.000\n",
+       "\n",
+       "[14810 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ff_factors = catalog.load(\"ff_5_factor\")\n",
+    "ff_factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1963-07-01\n",
+       "1       1963-07-02\n",
+       "2       1963-07-03\n",
+       "3       1963-07-05\n",
+       "4       1963-07-08\n",
+       "           ...    \n",
+       "14805   2022-04-25\n",
+       "14806   2022-04-26\n",
+       "14807   2022-04-27\n",
+       "14808   2022-04-28\n",
+       "14809   2022-04-29\n",
+       "Name: date, Length: 14810, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(ff_factors.date,format='%Y%m%d')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Backtesting Portfolio"
+    "## Factor Regression"
    ]
   },
   {
@@ -296,91 +511,95 @@
     "    fund_amounts: List[float]\n",
     "    start_date: str\n",
     "    end_date: str\n",
-    "    df: PandasDataFrame\n",
-    "    rebalance: bool\n",
-    "    rebalance_frequency: Optional[str] = None\n",
-    "    frequency_map = Dict = {\"y\": 12, \"q\": 3, \"m\": 1}\n",
+    "    price_df: PandasDataFrame\n",
+    "    french_fama_df: PandasDataFrame\n",
     "\n",
     "    def prepare_data(self):\n",
-    "        self.df[\"date\"] = pd.to_datetime(self.df[\"date\"])\n",
-    "        self.df = self.df.sort_values(by=\"date\").reset_index(drop=True)\n",
-    "        self.df = self.df.loc[\n",
-    "            (self.df.date >= self.start_date) & (self.df.date <= self.end_date)\n",
+    "        self.price_df[\"date\"] = pd.to_datetime(self.df[\"date\"])\n",
+    "        self.price_df = self.price_df.sort_values(by=\"date\").reset_index(drop=True)\n",
+    "        self.price_df = self.price_df.loc[\n",
+    "            (self.price_df.date >= self.start_date) & (self.df.date <= self.end_date)\n",
     "        ].reset_index(drop=True)\n",
+    "        self.french_fama_df.date = pd.to_datetime(ff_factors.date,format='%Y%m%d')\n",
     "\n",
-    "    def normalise_index(self, fund_history):\n",
-    "        initial_index = fund_history[self.fund_codes].iloc[0]\n",
-    "        result = fund_history[self.fund_codes].divide(initial_index, axis=1)\n",
-    "        result[\"date\"] = fund_history[\"date\"]\n",
-    "        return result\n",
+    "    def calculate_returns(self,fund_codes):\n",
     "\n",
-    "    def backtest_portfolio(self, fund_amount, fund_history):\n",
-    "        num_funds = len(self.fund_codes)\n",
-    "        fund_diagonal = np.zeros((num_funds, num_funds))\n",
-    "        np.fill_diagonal(fund_diagonal, fund_amount)\n",
+    "        for i in fund_codes:\n",
+    "            subset_data[f\"{i}index\"] = (subset_data[i] / subset_data[i].shift()) - 1\n",
     "\n",
-    "        result = fund_history[self.fund_codes].dot(fund_diagonal)\n",
+    "        subset_data = subset_data.dropna()\n",
+    "        subset_data = subset_data.drop(fund_codes, axis=1)\n",
+    "        subset_data.columns = response_columns\n",
     "\n",
-    "        result.columns = self.fund_codes\n",
+    "        return subset_data\n",
     "\n",
-    "        result[\"portfolio\"] = result.sum(axis=1)\n",
-    "        result[\"date\"] = fund_history[\"date\"]\n",
+    "    def get_summary_results(self,results, fund_code):\n",
+    "        \"\"\"take the result of an statsmodel results table and transforms it into a dataframe\n",
+    "        https://www.statsmodels.org/stable/generated/statsmodels.regression.linear_model.RegressionResults.html\"\"\"\n",
+    "        pvals = results.pvalues\n",
+    "        coefficient = results.params\n",
+    "        conf_lower = results.conf_int()[0]\n",
+    "        conf_higher = results.conf_int()[1]\n",
+    "        standard_errors = results.bse\n",
+    "        residuals = results.resid\n",
+    "        num_obs = results.nobs\n",
+    "        rsquared = results.rsquared\n",
+    "        rsquard_adj = results.rsquared_adj\n",
+    "        fvalue = results.fvalue\n",
     "\n",
-    "        return result\n",
+    "        output_result = {\n",
+    "            \"fundCode\": fund_code,\n",
+    "            \"numberObservations\": num_obs,\n",
+    "            \"rSquared\": rsquared,\n",
+    "            \"rSquaredAdjusted\": rsquard_adj,\n",
+    "            \"fValue\": fvalue,\n",
+    "            \"coefficient\": coefficient,\n",
+    "            \"standardErrors\": standard_errors,\n",
+    "            \"pValues\": pvals,\n",
+    "            \"confidenceIntervalLower\": conf_lower,\n",
+    "            \"confidenceIntervalHigher\": conf_higher,\n",
+    "            \"residuals\": residuals,\n",
+    "        }\n",
     "\n",
-    "    def backtest_strategy(self):\n",
+    "        return output_result\n",
     "\n",
-    "        if self.rebalance:\n",
-    "            fund_weights= [i / sum(self.fund_amounts) for i in self.fund_amounts]\n",
-    "            rebalance_frequency = self.frequency_map[self.rebalance_frequency.lower()]\n",
+    "    def calculate_factor_regression(\n",
+    "        self,\n",
+    "        fund_code,\n",
+    "        regression_factors,\n",
+    "        frenchfama_Factors,\n",
+    "    ):\n",
     "\n",
-    "            date_range = pd.Series(pd.date_range(start=self.start_date, end=self.end_date,freq='D'))\n",
-    "            month_end_dates = date_range[date_range.dt.is_month_end].reset_index(drop=True)\n",
-    "            rebalancing_dates = month_end_dates[\n",
-    "                month_end_dates.index % rebalance_frequency == 0\n",
-    "            ].reset_index(drop=True).dt.strftime(\"%Y-%m-%d\").values.tolist()\n",
+    "        np.random.seed(1000)\n",
     "\n",
-    "            if self.start_date not in rebalancing_dates:\n",
-    "                rebalancing_dates.insert(0,self.start_date)\n",
+    "        regression_equation = \" + \".join(regression_factors)\n",
     "\n",
-    "            if self.end_date not in rebalancing_dates:\n",
-    "                rebalancing_dates.append(self.end_date)\n",
+    "        historical_returns = historical_returns.set_index(\"date\")\n",
+    "        historical_returns.index.name = None\n",
     "\n",
-    "            current_amount = sum(self.fund_amounts)\n",
+    "        frenchfama_Factors = frenchfama_Factors.set_index(\"date\")\n",
+    "        frenchfama_Factors.index.name = None\n",
     "\n",
-    "            strategy_list = []\n",
+    "        regression_data = pd.concat(\n",
+    "            [historical_returns, frenchfama_Factors], axis=1, join=\"inner\"\n",
+    "        )\n",
     "\n",
-    "            start_period = rebalancing_dates[0]\n",
-    "            \n",
-    "            for i in range(0, len(rebalancing_dates)-1):\n",
-    "                \n",
-    "                end_period = rebalancing_dates[i + 1]\n",
+    "        regression_data[fund_code] = regression_data[fund_code] - regression_data[\"RF\"]\n",
     "\n",
-    "                fund_history = self.df.loc[\n",
-    "                    (self.df.date >= start_period) & (self.df.date <= end_period)\n",
-    "                ].reset_index(drop=True)\n",
+    "        model = smf.ols(\n",
+    "            formula=f\"{fund_code} ~ {regression_equation}\", data=regression_data\n",
+    "        )\n",
     "\n",
-    "                fund_history = self.normalise_index(fund_history)\n",
+    "        results = model.fit()\n",
     "\n",
-    "                fund_amounts = np.multiply(fund_weights,current_amount)\n",
-    "                \n",
-    "                slice_df = self.backtest_portfolio(fund_amounts, fund_history)\n",
+    "        output = self.get_summary_results(results, fund_code)\n",
     "\n",
-    "                current_amount = slice_df.iloc[-1]['portfolio']\n",
+    "        return output\n",
     "\n",
-    "                strategy_list.append(slice_df)\n",
     "\n",
-    "                start_period = slice_df.iloc[-1]['date']\n",
     "\n",
-    "            result_df = pd.concat(strategy_list)\n",
-    "            result_df[\"date\"] = result_df[\"date\"].dt.strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "        else:\n",
-    "            self.df = self.normalise_index(self.df)\n",
-    "            \n",
-    "            result_df = self.backtest_portfolio(self.fund_amounts, self.df)\n",
-    "\n",
-    "        return result_df\n"
+    "\n"
    ]
   },
   {
@@ -392,11 +611,11 @@
     "external_data = {\n",
     "    \"fund_codes\": [\"EBAY\", \"AAPL\"],\n",
     "    \"fund_amounts\": [30,30],\n",
-    "    \"start_date\": \"2012-12-27\",\n",
+    "    \"start_date\": \"2010-12-27\",\n",
     "    \"end_date\": \"2019-12-31\",\n",
-    "    \"df\": price_df,\n",
-    "    \"rebalance\": True,\n",
-    "    \"rebalance_frequency\": \"m\"\n",
+    "    \"price_df\": price_df,\n",
+    "    \"french_fama_df\": ff_factors\n",
+    "\n",
     "}"
    ]
   },
