adding to do list

--- a/notebooks/factor_regression.ipynb
+++ b/notebooks/factor_regression.ipynb
@@ -28,7 +28,12 @@
    "metadata": {},
    "source": [
     "## To Do:\n",
-    "- "
+    "- Individual stocks vs portfolio\n",
+    "- Individual stock\n",
+    "  - Choose factors\n",
+    "  - Choose frequency\n",
+    "  - Choose timescale\n",
+    "- Portfolio"
    ]
   },
   {
