--- a/notebooks/factor_regression.ipynb
+++ b/notebooks/factor_regression.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-06 17:25:48,970 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-06-06 17:25:50,335 - root - INFO - ** Kedro project timeseries\n",
-      "2022-06-06 17:25:50,339 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n",
-      "2022-06-06 17:25:50,993 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-06-06 17:25:51,208 - root - INFO - ** Kedro project timeseries\n",
-      "2022-06-06 17:25:51,214 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
+      "2022-06-07 22:51:40,053 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-07 22:51:42,065 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-07 22:51:42,067 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n",
+      "2022-06-07 22:51:42,352 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-06-07 22:51:42,441 - root - INFO - ** Kedro project timeseries\n",
+      "2022-06-07 22:51:42,443 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-06 17:26:19,007 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
+      "2022-06-07 22:51:45,312 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
      ]
     },
     {
@@ -272,7 +272,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,14 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-06-06 17:26:19,449 - kedro.io.data_catalog - INFO - Loading data from `ff_5_factor` (CSVDataSet)...\n"
+      "2022-06-07 22:51:45,713 - kedro.io.data_catalog - INFO - Loading data from `ff_5_factor` (CSVDataSet)...\n"
      ]
     },
     {
@@ -457,7 +457,7 @@
        "[14810 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "Name: date, Length: 14810, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,34 +507,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Portfolio(BaseModel):\n",
     "    fund_codes: List[str]\n",
-    "    fund_amounts: List[float]\n",
     "    start_date: str\n",
     "    end_date: str\n",
     "    price_df: PandasDataFrame\n",
     "    french_fama_df: PandasDataFrame\n",
     "\n",
     "    def prepare_data(self):\n",
-    "        self.price_df[\"date\"] = pd.to_datetime(self.df[\"date\"])\n",
+    "        self.price_df[\"date\"] = pd.to_datetime(self.price_df[\"date\"])\n",
     "        self.price_df = self.price_df.sort_values(by=\"date\").reset_index(drop=True)\n",
     "        self.price_df = self.price_df.loc[\n",
-    "            (self.price_df.date >= self.start_date) & (self.df.date <= self.end_date)\n",
+    "            (self.price_df.date >= self.start_date) & (self.price_df.date <= self.end_date)\n",
     "        ].reset_index(drop=True)\n",
     "        self.french_fama_df.date = pd.to_datetime(ff_factors.date,format='%Y%m%d')\n",
+    "        self.french_fama_df = self.french_fama_df.rename(columns={'Mkt-RF':'Mkt'})\n",
     "\n",
-    "    def calculate_returns(self,fund_codes):\n",
+    "    def calculate_returns(self):\n",
     "\n",
-    "        for i in fund_codes:\n",
-    "            subset_data[f\"{i}index\"] = (subset_data[i] / subset_data[i].shift()) - 1\n",
+    "        columns = ['date'] + self.fund_codes\n",
+    "        subset_data = self.price_df[columns]\n",
+    "        for i in self.fund_codes:\n",
+    "            subset_data[i] = (subset_data[i] / subset_data[i].shift()) - 1\n",
     "\n",
     "        subset_data = subset_data.dropna()\n",
-    "        subset_data = subset_data.drop(fund_codes, axis=1)\n",
-    "        subset_data.columns = response_columns\n",
+    "\n",
     "\n",
     "        return subset_data\n",
     "\n",
@@ -573,6 +574,7 @@
     "        fund_code,\n",
     "        regression_factors,\n",
     "        frenchfama_Factors,\n",
+    "        historical_returns\n",
     "    ):\n",
     "\n",
     "        np.random.seed(1000)\n",
@@ -601,21 +603,29 @@
     "\n",
     "        return output\n",
     "\n",
+    "    def regress_funds(self):\n",
+    "        fund_returns = self.calculate_returns()\n",
+    "        output = []\n",
     "\n",
-    "\n",
-    "\n",
+    "        for i in self.fund_codes:\n",
+    "            output.append(self.calculate_factor_regression(\n",
+    "                i,\n",
+    "                ['Mkt','SMB','HML','RMW'],\n",
+    "                self.french_fama_df,\n",
+    "                fund_returns\n",
+    "            ))\n",
+    "        return output\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "external_data = {\n",
     "    \"fund_codes\": [\"EBAY\", \"AAPL\"],\n",
-    "    \"fund_amounts\": [30,30],\n",
     "    \"start_date\": \"2010-12-27\",\n",
     "    \"end_date\": \"2019-12-31\",\n",
     "    \"price_df\": price_df,\n",
@@ -626,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,145 +645,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8g/67y55mms29zf6yt6q92_3hsr0000gn/T/ipykernel_7205/1469856647.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  subset_data[i] = (subset_data[i] / subset_data[i].shift()) - 1\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EBAY</th>\n",
-       "      <th>AAPL</th>\n",
-       "      <th>portfolio</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>2012-12-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29.713661</td>\n",
-       "      <td>29.681350</td>\n",
-       "      <td>59.395011</td>\n",
-       "      <td>2012-12-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30.422171</td>\n",
-       "      <td>30.996752</td>\n",
-       "      <td>61.418923</td>\n",
-       "      <td>2012-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30.709462</td>\n",
-       "      <td>30.709462</td>\n",
-       "      <td>61.418923</td>\n",
-       "      <td>2012-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>32.270476</td>\n",
-       "      <td>31.682214</td>\n",
-       "      <td>63.952690</td>\n",
-       "      <td>2013-01-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>88.028200</td>\n",
-       "      <td>91.850086</td>\n",
-       "      <td>179.878286</td>\n",
-       "      <td>2019-12-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>88.125442</td>\n",
-       "      <td>93.672419</td>\n",
-       "      <td>181.797861</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>87.687853</td>\n",
-       "      <td>93.636877</td>\n",
-       "      <td>181.324730</td>\n",
-       "      <td>2019-12-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>87.031471</td>\n",
-       "      <td>94.192624</td>\n",
-       "      <td>181.224095</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>87.785095</td>\n",
-       "      <td>94.880845</td>\n",
-       "      <td>182.665940</td>\n",
-       "      <td>2019-12-31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1849 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         EBAY       AAPL   portfolio        date\n",
-       "0   30.000000  30.000000   60.000000  2012-12-27\n",
-       "1   29.713661  29.681350   59.395011  2012-12-28\n",
-       "2   30.422171  30.996752   61.418923  2012-12-31\n",
-       "0   30.709462  30.709462   61.418923  2012-12-31\n",
-       "1   32.270476  31.682214   63.952690  2013-01-02\n",
-       "..        ...        ...         ...         ...\n",
-       "17  88.028200  91.850086  179.878286  2019-12-24\n",
-       "18  88.125442  93.672419  181.797861  2019-12-26\n",
-       "19  87.687853  93.636877  181.324730  2019-12-27\n",
-       "20  87.031471  94.192624  181.224095  2019-12-30\n",
-       "21  87.785095  94.880845  182.665940  2019-12-31\n",
-       "\n",
-       "[1849 rows x 4 columns]"
+       "[{'fundCode': 'EBAY',\n",
+       "  'numberObservations': 2268.0,\n",
+       "  'rSquared': 0.3269123661302993,\n",
+       "  'rSquaredAdjusted': 0.3257226398662786,\n",
+       "  'fValue': 274.7794816477351,\n",
+       "  'coefficient': Intercept   -0.002117\n",
+       "  Mkt          0.010811\n",
+       "  SMB          0.000184\n",
+       "  HML         -0.002710\n",
+       "  RMW         -0.001194\n",
+       "  dtype: float64,\n",
+       "  'standardErrors': Intercept    0.000312\n",
+       "  Mkt          0.000375\n",
+       "  SMB          0.000664\n",
+       "  HML          0.000630\n",
+       "  RMW          0.001041\n",
+       "  dtype: float64,\n",
+       "  'pValues': Intercept     1.509981e-11\n",
+       "  Mkt          4.880540e-156\n",
+       "  SMB           7.813795e-01\n",
+       "  HML           1.753485e-05\n",
+       "  RMW           2.513008e-01\n",
+       "  dtype: float64,\n",
+       "  'confidenceIntervalLower': Intercept   -0.002729\n",
+       "  Mkt          0.010076\n",
+       "  SMB         -0.001118\n",
+       "  HML         -0.003944\n",
+       "  RMW         -0.003235\n",
+       "  Name: 0, dtype: float64,\n",
+       "  'confidenceIntervalHigher': Intercept   -0.001505\n",
+       "  Mkt          0.011546\n",
+       "  SMB          0.001487\n",
+       "  HML         -0.001475\n",
+       "  RMW          0.000847\n",
+       "  Name: 1, dtype: float64,\n",
+       "  'residuals': 2010-12-28    0.003058\n",
+       "  2010-12-29   -0.000733\n",
+       "  2010-12-30   -0.005725\n",
+       "  2010-12-31   -0.007898\n",
+       "  2011-01-03    0.021411\n",
+       "                  ...   \n",
+       "  2019-12-24   -0.005421\n",
+       "  2019-12-26   -0.008566\n",
+       "  2019-12-27   -0.008584\n",
+       "  2019-12-30   -0.004609\n",
+       "  2019-12-31    0.000873\n",
+       "  Length: 2268, dtype: float64},\n",
+       " {'fundCode': 'AAPL',\n",
+       "  'numberObservations': 2268.0,\n",
+       "  'rSquared': 0.37281364755968405,\n",
+       "  'rSquaredAdjusted': 0.3717050548023879,\n",
+       "  'fValue': 336.29450048813464,\n",
+       "  'coefficient': Intercept   -0.001868\n",
+       "  Mkt          0.011303\n",
+       "  SMB         -0.001249\n",
+       "  HML         -0.005567\n",
+       "  RMW          0.006559\n",
+       "  dtype: float64,\n",
+       "  'standardErrors': Intercept    0.000274\n",
+       "  Mkt          0.000329\n",
+       "  SMB          0.000583\n",
+       "  HML          0.000553\n",
+       "  RMW          0.000914\n",
+       "  dtype: float64,\n",
+       "  'pValues': Intercept     1.210899e-11\n",
+       "  Mkt          2.499874e-208\n",
+       "  SMB           3.236189e-02\n",
+       "  HML           2.388589e-23\n",
+       "  RMW           9.643392e-13\n",
+       "  dtype: float64,\n",
+       "  'confidenceIntervalLower': Intercept   -0.002406\n",
+       "  Mkt          0.010658\n",
+       "  SMB         -0.002393\n",
+       "  HML         -0.006651\n",
+       "  RMW          0.004767\n",
+       "  Name: 0, dtype: float64,\n",
+       "  'confidenceIntervalHigher': Intercept   -0.001330\n",
+       "  Mkt          0.011949\n",
+       "  SMB         -0.000105\n",
+       "  HML         -0.004482\n",
+       "  RMW          0.008352\n",
+       "  Name: 1, dtype: float64,\n",
+       "  'residuals': 2010-12-28    0.003776\n",
+       "  2010-12-29   -0.002645\n",
+       "  2010-12-30   -0.004327\n",
+       "  2010-12-31    0.000036\n",
+       "  2011-01-03    0.018059\n",
+       "                  ...   \n",
+       "  2019-12-24   -0.002051\n",
+       "  2019-12-26    0.006943\n",
+       "  2019-12-27   -0.007153\n",
+       "  2019-12-30    0.009992\n",
+       "  2019-12-31    0.000378\n",
+       "  Length: 2268, dtype: float64}]"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mock_portfolio.prepare_data()\n",
-    "mock_portfolio.backtest_strategy()"
+    "mock_portfolio.regress_funds()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8g/67y55mms29zf6yt6q92_3hsr0000gn/T/ipykernel_7205/1469856647.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  subset_data[i] = (subset_data[i] / subset_data[i].shift()) - 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = mock_portfolio.regress_funds()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
