--- a/notebooks/backtest.ipynb
+++ b/notebooks/backtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,17 @@
      "text": [
       "The kedro.extras.extensions.ipython extension is already loaded. To reload it, use:\n",
       "  %reload_ext kedro.extras.extensions.ipython\n",
-      "2022-07-01 19:14:48,156 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-07-01 19:14:48,235 - root - INFO - ** Kedro project timeseries\n",
-      "2022-07-01 19:14:48,237 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
+      "2022-07-01 22:23:16,734 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-07-01 22:23:16,817 - root - INFO - ** Kedro project timeseries\n",
+      "2022-07-01 22:23:16,818 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
      ]
     }
    ],
    "source": [
     "%load_ext kedro.extras.extensions.ipython\n",
-    "%reload_kedro /Users/yeungadrian/Documents/repo/TimeSeries/\n",
-    "#C:\\Users\\Adrian\\Documents\\repo\\TimeSeries"
+    "%reload_kedro C:\\Users\\Adrian\\Documents\\repo\\TimeSeries\n",
+    "#\n",
+    "#/Users/yeungadrian/Documents/repo/TimeSeries/"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-01 19:14:48,339 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
+      "2022-07-01 22:23:16,905 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
      ]
     },
     {
@@ -266,7 +267,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-01 19:14:48,426 - kedro.io.data_catalog - INFO - Loading data from `sp500` (CSVDataSet)...\n"
+      "2022-07-01 22:23:16,950 - kedro.io.data_catalog - INFO - Loading data from `sp500` (CSVDataSet)...\n"
      ]
     }
    ],
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +597,7 @@
        "\" idx = pd.date_range(external_data['start_date'],external_data['end_date'],freq='D')\\nprojection = projection.set_index(pd.DatetimeIndex(projection.date))\\nprojection.reindex(idx, fill_value=0) \""
       ]
      },
-     "execution_count": 190,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +752,7 @@
        "[1513 rows x 5 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -770,20 +771,25 @@
       "text/plain": [
        "{'arithmetic_mean_m': 0.02259260121235626,\n",
        " 'arithmetic_mean_y': 0.3074700631006573,\n",
-       " 'geometric_mean_m': -0.0,\n",
-       " 'geometric_mean_y': 0.0,\n",
+       " 'geometric_mean_m': 0.019701031133584346,\n",
+       " 'geometric_mean_y': 0.2637882161884719,\n",
        " 'std_m': 0.07728347783613997,\n",
        " 'std_downside': 0.031759166439820234,\n",
        " 'market_correlation': 0.7227839547609198,\n",
-       " 'alpha': 0.005690616285629266,\n",
+       " 'alpha': 0.005690616285629265,\n",
        " 'beta': 1.4363236694444261,\n",
+       " 'r_squared': 0.5224166452598353,\n",
        " 'cagr': 0.18146117791316696,\n",
        " 'sharpe_ratio': 2.218600698543962,\n",
        " 'sortino_ratio': 5.398793392076743,\n",
-       " 'max_drawdown': -0.2979863618687103}"
+       " 'treynor_ratio': 0.11937502776062209,\n",
+       " 'calmar_ratio': 0.6089579965176959,\n",
+       " 'max_drawdown': 0.2979863618687103,\n",
+       " 'active_error': 0.08339548967888888,\n",
+       " 'tracking_error': 0.056039451167368866}"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +820,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bb653595151008fdd6663423895767f1294320ddff324af138a526908b72b68c"
+    "hash": "c797575504c40eb41baefd628b48c3806e42e524e521446c37567eef553fc653"
    }
   }
  },
