--- a/notebooks/backtest.ipynb
+++ b/notebooks/backtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,16 @@
      "text": [
       "The kedro.extras.extensions.ipython extension is already loaded. To reload it, use:\n",
       "  %reload_ext kedro.extras.extensions.ipython\n",
-      "2022-07-01 22:23:16,734 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
-      "2022-07-01 22:23:16,817 - root - INFO - ** Kedro project timeseries\n",
-      "2022-07-01 22:23:16,818 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
+      "2022-07-02 12:08:18,594 - kedro.framework.session.store - INFO - `read()` not implemented for `BaseSessionStore`. Assuming empty store.\n",
+      "2022-07-02 12:08:18,683 - root - INFO - ** Kedro project timeseries\n",
+      "2022-07-02 12:08:18,686 - root - INFO - Defined global variable `context`, `session`, `catalog` and `pipelines`\n"
      ]
     }
    ],
    "source": [
     "%load_ext kedro.extras.extensions.ipython\n",
-    "%reload_kedro C:\\Users\\Adrian\\Documents\\repo\\TimeSeries\n",
-    "#\n",
+    "%reload_kedro /Users/yeungadrian/Documents/repo/TimeSeries/\n",
+    "# C:\\Users\\Adrian\\Documents\\repo\\TimeSeries\n",
     "#/Users/yeungadrian/Documents/repo/TimeSeries/"
    ]
   },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-01 22:23:16,905 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
+      "2022-07-02 12:08:18,989 - kedro.io.data_catalog - INFO - Loading data from `fund_prices` (ParquetDataSet)...\n"
      ]
     },
     {
@@ -267,7 +267,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-01 22:23:16,950 - kedro.io.data_catalog - INFO - Loading data from `sp500` (CSVDataSet)...\n"
+      "2022-07-02 12:08:19,127 - kedro.io.data_catalog - INFO - Loading data from `sp500` (CSVDataSet)...\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "[5327 rows x 8 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "\" idx = pd.date_range(external_data['start_date'],external_data['end_date'],freq='D')\\nprojection = projection.set_index(pd.DatetimeIndex(projection.date))\\nprojection.reindex(idx, fill_value=0) \""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "[1513 rows x 5 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -774,11 +774,11 @@
        " 'geometric_mean_m': 0.019701031133584346,\n",
        " 'geometric_mean_y': 0.2637882161884719,\n",
        " 'std_m': 0.07728347783613997,\n",
-       " 'std_downside': 0.031759166439820234,\n",
+       " 'std_downside_m': 0.031759166439820234,\n",
        " 'market_correlation': 0.7227839547609198,\n",
-       " 'alpha': 0.005690616285629265,\n",
+       " 'alpha': 0.005690616285629266,\n",
        " 'beta': 1.4363236694444261,\n",
-       " 'r_squared': 0.5224166452598353,\n",
+       " 'r_squared': 0.5224166452598351,\n",
        " 'cagr': 0.18146117791316696,\n",
        " 'sharpe_ratio': 2.218600698543962,\n",
        " 'sortino_ratio': 5.398793392076743,\n",
@@ -786,16 +786,20 @@
        " 'calmar_ratio': 0.6089579965176959,\n",
        " 'max_drawdown': 0.2979863618687103,\n",
        " 'active_error': 0.08339548967888888,\n",
-       " 'tracking_error': 0.056039451167368866}"
+       " 'tracking_error': 0.056039451167368866,\n",
+       " 'information_ratio': 1.4881567885063287,\n",
+       " 'upside_capture_ratio': 1.522279822162407,\n",
+       " 'downside_capture_ratio': 1.2273104016933603,\n",
+       " 'capture_ratio': 1.2403380758951181}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Metrics().calculate_metrics(projection)"
+    "Metrics().metrics(projection)"
    ]
   }
  ],
