deleting unused files, using hydra for config

--- a/notebooks/backtest.ipynb
+++ b/notebooks/backtest.ipynb
@@ -25,15 +25,24 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from hydra import compose, initialize\n",
     "import pandas as pd\n",
-    "from importlib import reload\n",
-    "import portfolio\n",
-    "import metrics\n",
-    "reload(portfolio)\n",
-    "reload(metrics)\n",
     "\n",
-    "from portfolio import DataLoader, Portfolio\n",
-    "from metrics import Metrics\n"
+    "import os, sys\n",
+    "sys.path.append(os.path.join(os.getcwd(), '..'))\n",
+    "\n",
+    "from src.portfolio import DataLoader, Portfolio\n",
+    "from src.metrics import Metrics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initialize(version_base=None, config_path=\"../config\")\n",
+    "cfg = compose(config_name=\"main\")"
    ]
   },
   {
@@ -49,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prices = pd.read_parquet('../data/raw/fund_prices.parquet')\n",
+    "prices = pd.read_parquet(cfg.data.raw.prices)\n",
     "prices"
    ]
   },
@@ -59,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp500 = pd.read_csv(\"../data/raw/sp500.csv\")"
+    "sp500 = pd.read_csv(cfg.data.raw.sp500)"
    ]
   },
   {
@@ -189,13 +198,6 @@
    "source": [
     "Metrics().metrics(projection)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
