--- a/notebooks/factor_regression.ipynb
+++ b/notebooks/factor_regression.ipynb
@@ -27,10 +27,24 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from hydra import compose, initialize\n",
     "import pandas as pd\n",
     "from pydantic import BaseModel\n",
     "import statsmodels.formula.api as smf\n",
-    "from typing import List, TypeVar, Optional, Dict"
+    "from typing import List, TypeVar, Optional, Dict\n",
+    "\n",
+    "import os, sys\n",
+    "sys.path.append(os.path.join(os.getcwd(), '..'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initialize(version_base=None, config_path=\"../config\")\n",
+    "cfg = compose(config_name=\"main\")"
    ]
   },
   {
@@ -55,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_df = pd.read_parquet('../data/raw/fund_prices.parquet')\n",
+    "price_df = pd.read_parquet(cfg.data.raw.prices)\n",
     "price_df"
    ]
   },
@@ -65,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ff_factors = pd.read_parquet('../data/raw/ff_5_factor.parquet')\n",
+    "ff_factors = pd.read_parquet(cfg.data.raw.fffactor)\n",
     "ff_factors"
    ]
   },
@@ -232,13 +246,6 @@
     "mock_portfolio.prepare_data()\n",
     "mock_portfolio.regress_funds()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
